* Updated CSS to fix facebook like popup box cropped issue * Remove z-index and old facebook css styling
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-facebook-share-like-button/trunk@838362 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/fbshare.css
+++ b/css/fbshare.css
@@ -6,19 +6,11 @@
 }
 
 .facebook-button {
-    width: 300px;
+    width: 400px !important;
     height: 25px;
-    overflow: visible;
 }
 
-.fb-like { z-index: 99999; overflow: visible; }
-
-.fbpdl {
-    z-index: 99999 !important; width:300px;
-    overflow: visible;
-}
-
-.fb-like span {
-    z-index: 99999 !important; width:500px !important;
-    overflow: visible;
+embed, iframe, object
+{
+    max-width: 635% !important;
 }
